fix savepassword button on mobile

--- a/src/app/route/MyAccountDetails/MyAccountDetails.style.scss
+++ b/src/app/route/MyAccountDetails/MyAccountDetails.style.scss
@@ -150,6 +150,10 @@
                     @include tablet {
                         width: 70%;
                     }
+
+                    @include mobile {
+                        width: 100%;
+                    }
                 }
             }
         } 
